# rust-boilerplate

./: .gitignore  Cargo.toml  LICENSE  MyApp.toml  README.md
src/: config.rs  logging.rs  main.rs
