[package]
name = "rust-boilerplate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arc-swap = "1.7"
clap = { version = "4.5", features = ["cargo", "derive"] }
chrono =  { version = "0", features = ["serde"] }
debounced = "0.2.0"
figment = { version = "0", features = ["toml", "env"] }
futures = "0.3"
lazy_static = "1.4.0"
notify = "7"
once_cell = "1"
parse-display = "0.10"
rand = "0.8"
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "chrono", "fmt", "env-filter", "local-time"] }

[target.'cfg(unix)'.dependencies]
systemd = "0.10"

[profile.release]
opt-level = "z"
overflow-checks = false
lto = true
codegen-units = 1
debug = true